// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTabbedContent behavior when selected tab state isn't controlled by the owner, select the first tab by default 1`] = `
<div>
  <div
    class="ouiTabs"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent behavior when uncontrolled, the selected tab should update if it receives new content 1`] = `
<div>
  <div
    class="ouiTabs"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      updated Kibana content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent is rendered with required props and tabs 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiTabs"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent props autoFocus initial is rendered 1`] = `
<div>
  <div
    class="ouiTabs"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent props autoFocus selected is rendered 1`] = `
<div>
  <div
    class="ouiTabs"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent props display can be condensed 1`] = `
<div>
  <div
    class="ouiTabs ouiTabs--condensed"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent props initialSelectedTab renders a selected tab 1`] = `
<div>
  <div
    class="ouiTabs"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent props selectedTab renders a selected tab 1`] = `
<div>
  <div
    class="ouiTabs"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`OuiTabbedContent props size can be small 1`] = `
<div>
  <div
    class="ouiTabs ouiTabs--small"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="ouiTab ouiTab-isSelected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="ouiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="ouiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;
